# speckit-buff-v2

./: .coveragerc  .flake8  .roomodes  AGENTS.md  ARCHITECTURE_OVERVIEW.md  CACHE_ISSUE_FIX.md  CLAUDE.md  CLI_ENHANCEMENTS_APPLIED.md  COMPLETE_FIX.md  CONVERSATIONAL_MODE_UPGRADE.md  CRITICAL_DOWNLOAD_FIX.md  CRITICAL_FIX.md  DEPLOYMENT_GUIDE.md  Dspeckit-buffspecs005-spec-kit-enhancedSPEC_SUMMARY.md  ENHANCEMENTS_TO_ORIGINAL_CLI.md  FINAL_CORRECT_USAGE.md  FORK_CHANGES.md  IMPLEMENTATION_SUMMARY.md  MERGE_COMPLETE.md  ORCHESTRATION_REALITY_CHECK.md  PRODUCTION_READY_GUIDE.md  README.md  READY_FOR_RELEASE.md  SESSION_COMPLETE_SUMMARY.md  TEMPLATE_UPDATE_REPORT.md  WORKFLOW_EXECUTION_FLOW.md  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: release.yml
.specify/: context.json
.specify/memory/: constitution.md
.specify/templates/: architecture-patterns.md  brownfield-analysis.md  constitution.md  spec-template.md  tasks-template.md
.windsurf/rules/: specify-rules.md
.windsurf/workflows/: plan copy.md  research-tech.md  specify copy.md
memory/: constitution.md
scripts/bash/: analyze-codebase.sh  build-task-graph.sh  check-dependencies.sh  check-prerequisites.sh  detect-breaking-changes.sh  detect-complexity.sh  detect-framework.sh  extract-section.sh  inject-tags.sh  mark-file-deprecated.sh  migrate-platform.sh  orchestrate-workflow.sh  scaffold-feature.sh  sync-tasks.sh  track-file-rename.sh  validate-context.sh  validate-frontmatter.sh  validate-naming.sh  validate-structure.sh  validate-tags.sh
scripts/powershell/: analyze-codebase.ps1  check-dependencies.ps1  check-prerequisites.ps1  detect-breaking-changes.ps1  detect-complexity.ps1  detect-framework.ps1  extract-section.ps1  inject-tags.ps1  migrate-platform.ps1  orchestrate-workflow.ps1  scaffold-feature.ps1  sync-tasks.ps1  track-file-rename.ps1  validate-context.ps1  validate-frontmatter.ps1  validate-naming.ps1  validate-structure.ps1  validate-tags.ps1
specify_cli/: __init__.py  cli.py  template_loader.py  validators.py
specify_cli/commands/: __init__.py  check.py  init.py
specs/001-improve-spec-kit/: completion-evidence.md  constitutional-validation.md  contract-tests.md  data-model.md  glossary.md  plan.md  platform-support-matrix.md  quickstart.md  research.md  security-requirements.md  spec.md  task-reconciliation.md  tasks.md  tasks.md.bak
specs/002-please-investigate-though/: spec.md
specs/003-based-on-the/: ANALYSIS_REPORT.md  VALIDATION_SUMMARY.md  WINDSURF.md  data-model.md  plan.md  quickstart.md  research.md  spec.md  tasks.md
specs/004-realignment-v2-corrected/: IMPLEMENTATION_COMPLETE.md  MIGRATION_NOTES.md  ORCHESTRATION_UPGRADE.md  (+7 more)
templates/: agent-prompt-patterns.md  architecture-meta-template.md  architecture-patterns.md  brownfield-analysis.md  constitution.md  dependency-report.md  plan-template.md  spec-template.md  tasks-template.md  testing-strategy.md
tests/: README.md  conftest.py  helpers.py  pytest.ini  requirements.txt  run_contract_tests.py
(+84 files in other folders)
